# altumopp

./: .gitignore  CMakeLists.txt  README.md  log.txt
src/: CMakeLists.txt  geoip_client.cc  geoip_client.h
src/Altumo/: Application.h
src/Altumo/FastCgi/: FastCgiRecord.cpp  FastCgiRecord.h  Server.h  Session.cpp  Session.h  fastcgi_specification.html
src/Altumo/Fastcgi/: FastCgiRecord.h  common.h
src/Altumo/Http/: request.cc  request.h
src/extensions/php/: .gitignore  altumo.c  altumo.cc  config.m4  php_altumo.h  test.php
src/fastcgi/: README.txt  project-root.jam
src/fastcgi/boost/: cgi.hpp
src/fastcgi/boost/cgi/: basic_client.hpp  basic_connection.hpp  basic_request.hpp  basic_request_acceptor.hpp  cgi.hpp  config.hpp  error.hpp  fcgi.hpp
src/fastcgi/boost/cgi/cgi/: acceptor.hpp  request.hpp  request_service.hpp  service.hpp
src/fastcgi/boost/cgi/common/: basic_protocol_service.hpp  commit.hpp  connection_base.hpp  cookie.hpp  data_map_proxy.hpp  error.hpp  form_parser.hpp  form_part.hpp  has_hidden_io_service.hpp  header.hpp  io_service_provider.hpp  is_async.hpp  map.hpp  name.hpp  parse_options.hpp  path_info.hpp  protocol_traits.hpp  request_acceptor_service.hpp  request_base.hpp  request_data.hpp  request_service.hpp  request_status.hpp  response.hpp  role_type.hpp  source_enums.hpp  tags.hpp
src/fastcgi/boost/cgi/connections/: anonymous_pipe.hpp  async_stdio.hpp  shareable_tcp_socket.hpp  stdio.hpp  tcp_socket.hpp
src/fastcgi/boost/cgi/detail/: basic_io_object.hpp  basic_sync_io_object.hpp  common_headers.hpp  extract_params.hpp  is_multimap.hpp  pop_options.hpp  push_options.hpp  save_environment.hpp  service_base.hpp  service_id.hpp  throw_error.hpp  url_decode.hpp  url_decode.ipp
src/fastcgi/boost/cgi/fcgi/: acceptor.hpp  acceptor_service_impl.hpp  client.hpp  error.hpp  request.hpp  request_acceptor_service.hpp  request_fwd.hpp  request_service.hpp  response.hpp  service.hpp  specification.hpp  win32_acceptor_service_impl.hpp
src/fastcgi/boost/cgi/fwd/: basic_client_fwd.hpp  basic_connection_fwd.hpp  basic_protocol_service_fwd.hpp  basic_request_acceptor_fwd.hpp  basic_request_fwd.hpp  data_map_proxy_fwd.hpp  form_parser_fwd.hpp  io_service_provider_fwd.hpp  request_service_fwd.hpp  sessions_fwd.hpp
src/fastcgi/boost/cgi/http/: status_code.hpp
src/fastcgi/boost/cgi/impl/: basic_request.ipp  fcgi_request_service.ipp  form_parser.ipp  response.ipp
src/fastcgi/boost/cgi/import/: basic_io_object.hpp  buffer.hpp  io_service.hpp  read.hpp  streambuf.hpp  write.hpp
src/fastcgi/boost/cgi/utility/: redirect.hpp  sessions.hpp  stencil.hpp
src/fastcgi/fastcgi++/: http.cpp  main.cc  request.cpp
src/fastcgi/fastcgi++/fastcgi++-1.2/: Makefile
src/fastcgi/include/: fcgi_config.h
src/fastcgi/libs/cgi/: index.html
src/server/: main.cc  main2.cc  main3.cc
(+354 files in other folders)
